fixed modal & board list content overflow

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -5,4 +5,6 @@
 	border-radius: 6px;
 	background: var(--color-bg-elements);
 	margin-inline:16px;
+	max-height: 90svh;
+	overflow: auto;
 }
