--- a/src/features/sidebar/Sidebar/Sidebar.module.css
+++ b/src/features/sidebar/Sidebar/Sidebar.module.css
@@ -46,6 +46,7 @@
 }
 
 .bottomControls {
+	margin-top: 24px;
 	padding-right: 24px;
 	display: flex;
 	flex-direction: column;
